# criminal-networks-analysis

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  GOAL.md  Makefile  README.md  build_real_graph.py  demo.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
aegis/: cli.py  config.py  ids.py
aegis/actions/: ids.py  service.py
aegis/analytics/: __init__.py  clustering.py
aegis/api/: app.py  auth.py  deps.py  mappers.py  pagination.py  ratelimit.py  schemas.py  security.py  workspace.py
aegis/api/routes/: audit.py  cases.py  claims.py  entities.py  evidence.py  graph.py  identity.py  ingest.py  ontology.py  projections.py  provenance.py  review.py  search.py  sources.py
aegis/authz/: filters.py
aegis/er/: adjudication.py  backfill.py  canonical.py  evaluation.py  features.py  ledger.py  mentions.py  normalize.py  rules.py  settings.py  splink_job.py  translit.py
aegis/evidence/: vault.py
aegis/ingestion/: __init__.py  derivatives.py  service.py
aegis/migration/: legacy.py
aegis/projections/: __init__.py  cypher.py  edges.py  graph.py
aegis/queries/: graph.py  provenance.py
aegis/search/: entities.py
aegis/store/: __init__.py  models.py
app/: server.py
app/static/: index.html
cypher/: ingest.cypher
data/: README.md
data/real/: README.md
data/sample/mvp/: er-golden-set.json
docs/: ADDING_DATA.md  BACKUP_RESTORE.md  GIT_WORKFLOW.md  INGESTION.md  MVP_DEMO.md  RUNNING.md
docs/testing/: BEST_PRACTICES.md  README.md  TESTING_CRITERIA.md  TESTING_STRATEGY.md
infra/: bootstrap.sh
infra/keycloak/: aegis-realm.json
legacy/: ADDING_DATA.md  ARCHITECTURE.md  INGESTION.md  README.md  RUNNING.md  build_real_graph.py  demo.py
migrations/: env.py
migrations/versions/: 0002_core_claim_store.py  0007_identity_ledger.py  0008_edge_projection_v2.py  0009_mention_translit_keys.py
ontology/: aegis.yaml
ontology/history/: aegis-0.4.0.yaml
pipeline/: __init__.py  clustering.py  models.py  neo4j_export.py  pdf_loader.py  real_dataset.py  semantic_pass.py  structural_pass.py
real_data/: README.md
sample_data/: b_report_excerpt.txt  pcoi_arrest_list.txt
scripts/: setup_ingestion.sh
speckit/: README.md  constitution.md  decisions.md  plan.md  roadmap.md  spec.md  tasks-phase-2.md  tasks-phase-3.md
speckit/phases/: phase-01-claim-store.md  phase-02-mvp-identity-provenance.md  phase-03-ontology-v2.md  phase-04-workspace-object-views.md  phase-05-events-geo-time.md  phase-06-search-object-sets-analytics.md  phase-07-sharing-governance.md  phase-08-controlled-ai.md  phase-09-production.md
speckit/reviews/: 2026-07-18-external-review-disposition.md  2026-07-18-external-review.md  phase-01-exit-review.md  phase-02-exit-review.md
speckit/specs/: 01-ontology.md  02-data-model.md  03-security.md  04-ingestion.md  05-entity-resolution.md  06-api.md  07-ui.md  08-ontology-v2.md
speckit/tasks/: phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md
tests/: conftest.py  test_legacy_containment.py  test_ontology.py  test_schema.py
tests/component/: test_auth.py  test_core_independence.py  test_legacy_containment.py  test_route_gating.py  test_security_headers.py  test_workspace_serving.py
tests/contract/: test_audit_schema.py  test_authorization_matrix.py  test_evidence_schema.py  test_mvp_demo_runbook.py  test_ontology.py  test_openapi.py  test_phase_02_exit.py  test_schema.py
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: conftest.py  test_actions.py  test_adjudication.py  test_api.py  test_audit.py  test_authz.py  test_edge_projection.py  test_entity_provenance.py  test_er_evaluation.py  test_evidence_migration.py  test_graph_routes.py  test_identity_ledger.py  test_identity_routes.py  test_ingest_routes.py  test_ingestion.py  test_mention_extraction.py  test_migration.py  test_projection_routes.py  test_projections.py  test_review_envelope.py  test_schema.py  test_search.py  test_splink_pipeline.py  test_translit_key_migration.py
tests/support/: __init__.py  database.py  paths.py  pdf.py  schema.py
tests/system/: README.md  test_authz_openfga.py
tests/unit/: test_canonical_lineage.py  test_derivatives.py  test_edge_segmentation.py  test_er_evaluation.py  test_evidence_vault.py  test_mention_normalize.py  test_migration_mapping.py  test_pagination.py  test_projection_weights.py  test_revocation.py  test_suggestion_idempotency.py  test_translit.py
ui/: .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: ingest-stub.ts  oidc-stub.ts  provenance-stub.ts  provenance.spec.ts  review-stub.ts  smoke.spec.ts  sources.spec.ts
ui/src/: App.tsx  main.tsx  routing.ts  styles.css
ui/src/api/: client.ts  schema.d.ts
ui/src/auth/: AuthGuard.tsx  config.ts
ui/src/layout/: Shell.tsx
ui/src/views/: CandidateQueue.tsx  Digest.tsx  EntitySearch.tsx  GraphCanvas.tsx  GraphView.tsx  IntakePanel.tsx  Outcome.tsx  ProvenancePanel.tsx  RecordLedger.tsx  SourcesView.tsx  SuggestionQueue.tsx
