[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — ontology-driven, governed intelligence platform core (see speckit/)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "structlog>=24.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pyyaml>=6",
    "minio>=7.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "slowapi>=0.1.10",
    # Projection cell detection lives in aegis.analytics.clustering (vendored
    # out of the quarantine by T21, H-36). networkx is the pure-python fallback
    # that guarantees `aegis projections rebuild` works from the wheel alone,
    # without the optional C-extension leiden backend below.
    "networkx>=3",
    # Probabilistic entity resolution (spec 05 §3.2, T19). DuckDB is Splink's
    # local backend; unidecode + jellyfish give the transliteration and
    # phonetic keys that make cross-script names comparable without PyICU,
    # whose wheels are unreliable on the platforms this runs on.
    "splink>=4.0",
    "duckdb>=1.0",
    "unidecode>=1.3",
    "jellyfish>=1.0",
]

[project.optional-dependencies]
# python-igraph + leidenalg give true multiplex Leiden (aegis.analytics.clustering
# prefers them, falls back to networkx Louvain when absent). In dev/CI so the
# projection tests exercise the leiden path.
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "httpx2>=2.0",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
]

[project.urls]
Repository = "https://github.com/drex7001/Aegis"

[project.scripts]
aegis = "aegis.cli:app"

# Only the platform core is packaged; the legacy prototype (legacy/) lives
# beside it until Phase 4 replaces and deletes it (ADR-023 — replace, never extend).
[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers --import-mode=importlib"
xfail_strict = true
markers = [
    "unit: isolated test with no process or service boundary",
    "component: in-process API or CLI test with replaced external boundaries",
    "contract: schema, ontology, API, or governance invariant",
    "integration: requires the dedicated PostgreSQL test database",
    "system: requires the real compose service stack",
    "e2e: browser-driven end-to-end workflow",
    "requirement(*ids): maps a test to constitution, spec, ADR, or task identifiers",
    "slow: intentionally long-running test",
    "manual: operator-run non-blocking test",
]

[tool.coverage.run]
branch = true
source = ["aegis"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80

[tool.coverage.xml]
output = "coverage.xml"
